Small changes on CSS

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,22 @@
   @tailwind components;
   @tailwind utilities;
 
+@layer base {
 body {
-  @apply font-secondary
+  @apply font-secondary bg-secondary text-base text-primary
+}
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-primary
+  }
+.h1 {
+  @apply text-[64px] leading-none xl:text-[72px] xl:leadint-[76px]
+}
+  .h2 {
+    @apply text-[48px] leading-[54px]
+  }
 }
