--- a/app/globals.css
+++ b/app/globals.css
@@ -20,4 +20,19 @@ body {
   .h2 {
     @apply text-[48px] leading-[54px]
   }
+  .h3 {
+    @apply text-[36px] leading-[48px]
+  }
+  .h4 {
+    @apply text-xl
+  }
+  .lead {
+    @apply text-lg mb-8
+  }
+  a {
+    @apply font-primary
+  }
+}
+.btn {
+  @apply bg-accent min-w-[178px] rounded-tl-[30px] rounded-bl-[30px] rounded-tr-[4px] rounded-br-[24px] uppercase tracking-[1px] h-[58px] pl-8 pr-6 flex items-center text-white
 }
