--- a/app/globals.css
+++ b/app/globals.css
@@ -36,3 +36,12 @@ body {
 .btn {
   @apply bg-accent min-w-[178px] rounded-tl-[30px] rounded-bl-[30px] rounded-tr-[4px] rounded-br-[24px] uppercase tracking-[1px] h-[58px] pl-8 pr-6 flex items-center text-white
 }
+.input {
+  @apply h-[54px] bg-white rounded-full px-6
+}
+.textarea {
+  @apply h-[120px] rounded-[20px] px-6 pt-4 resize-none
+}
+.input, .textarea {
+  @apply outline-none right-1 ring-accent/80 focus:ring-1 focus:ring-accent font-primary text-sm uppercase placeholder:text-primary text-primary
+}
